# datagen-rs

./: Cargo.toml  README.md
examples/: groupby.rs
src/: hash_map.rs  io.rs  iter.rs  lib.rs  macros.rs  main.rs  rand.rs  sort.rs  types.rs  unique.rs  utils.rs
src/io/: config.rs  manipulate.rs
src/iter/: ext.rs  extension.rs  extensions.rs  multiple_zip.rs  none.rs  none_by.rs  types.rs  unique.rs  unique_by.rs
src/utils/: memory.rs
