[package]
name = "h2o"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"
anyhow = "1.0.71"
csv = "1.2.2"
#fastrand = "2.0.0"
hashbrown = "0.14.0"
indicatif = "0.17.5"
rayon = "1.7.0"
tinyrand = "0.5.0"
#polars = "0.30.0"
#rand = "0.8.5"
