[package]
name = "datagen"
version = "0.1.0"
authors = ["Shingo OKAWA <shingo.okawa.g.h.c@gmail.com>"]
edition = "2021"

[dependencies]
ahash = "0.8.3"
csv = "1.2.2"
hashbrown = "0.14.0"
once_cell = "1.18.0"
rand = "0.8.5"
rlimit = "0.9.1"
sysinfo = "0.29.2"
tempfile = "3.6.0"
tinyrand = "0.5.0"

[dev-dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.5", features = ["derive"] }
env_logger = "0.10.0"
indicatif = "0.17.5"
log = "0.4.19"

[[example]]
name = "groupby"
